--- a/views/clicked-todo.hbs
+++ b/views/clicked-todo.hbs
@@ -1,4 +1,10 @@
-<p>{{description}}</p>
-<p>created at {{created}}</p>
-<a href="/{{id}}/edit">edit</a>
-<a href="/{{id}}/delete">delete</a>
+<div id="clickedDiv">
+  <div>
+    <h3>{{description}}</h3>
+    <p>created at {{created}}</p>
+  </div>
+  <div class="linksDiv">
+    <a href="/{{id}}/edit">edit</a>
+    <a href="/{{id}}/delete">delete</a>
+  </div>
+</div>
