--- a/views/clicked-todo.hbs
+++ b/views/clicked-todo.hbs
@@ -4,7 +4,9 @@
     <p>created at {{created}}</p>
   </div>
   <div class="linksDiv">
-    <a href="/{{id}}/edit">edit</a>
+    <a href="/{{id}}/edit">edit description</a>
+    <a href="/{{id}}/status">edit status</a>
     <a href="/{{id}}/delete">delete</a>
+
   </div>
 </div>
