--- a/views/edit-todo.hbs
+++ b/views/edit-todo.hbs
@@ -3,5 +3,6 @@
     name="description"
     placeholder="description"
     value="{{description}}"
+    class="inputBtn"
   />
-  <input type="submit" value="save" /></form>
+  <input type="submit" value="save" class="submitBtn" /></form>
