--- a/views/new-todo.hbs
+++ b/views/new-todo.hbs
@@ -2,4 +2,5 @@
     type="text"
     name="description"
     placeholder="description"
-  /><input type="submit" value="save" /></form>
+    class="inputBtn"
+  /><input type="submit" value="save" class="submitBtn" /></form>
