--- a/public/style.css
+++ b/public/style.css
@@ -24,7 +24,7 @@ header {
 
 nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 nav > a {
@@ -38,7 +38,8 @@ nav > a {
   padding-bottom: 30px;
   padding-top: 30px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  align-items: center;
   height: 250px;
 }
 
@@ -49,17 +50,19 @@ nav > a {
   color: rgb(0, 0, 0);
 }
 
+.inputBtn {
+  border-style: none;
+}
+
+.submitBtn {
+  width: auto;
+}
+
 #clickedDiv {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-#clickedDiv > div > h3 {
-  font-size: 20pt;
-  margin: 0px;
-  padding: 0px;
 }
 
 #clickedDiv > div > p {
@@ -81,6 +84,12 @@ nav > a {
 
 h1 {
   text-align: center;
+}
+
+h3 {
+  font-size: 20pt;
+  margin: 0px;
+  padding: 0px;
 }
 
 a:hover {
