--- a/views/delete-todo.hbs
+++ b/views/delete-todo.hbs
@@ -1,3 +1,3 @@
 <h5>please confirm the removal</h5>
 <form action="/{{id}}/delete" method="post">
-  <input type="submit" value="delete" /></form>
+  <input type="submit" value="delete" class="submitBtn" /></form>
