--- a/views/status-todo.hbs
+++ b/views/status-todo.hbs
@@ -1,6 +1,9 @@
-<h3>This todo is:</h3>
+<h5>This todo is:</h5>
 
 <form action="/{{id}}/status" method="post">
   <input type="submit" name="done" value="done" />
+</form>
+
+<form action="/{{id}}/status" method="post">
   <input type="submit" name="undone" value="undone" />
 </form>
