--- a/views/edit-todo.hbs
+++ b/views/edit-todo.hbs
@@ -1,8 +1,9 @@
-<form action="/{{id}}/edit" method="post"><input
-    type="text"
-    name="description"
-    placeholder="description"
-    value="{{description}}"
-    class="inputBtn"
-  />
-  <input type="submit" value="save" class="submitBtn" /></form>
+<div id="editwrapper"><form action="/{{id}}/edit" method="post"><input
+      type="text"
+      name="description"
+      placeholder="description"
+      value="{{description}}"
+      class="inputBtn"
+    />
+    <input type="submit" value="save" class="submitBtn" /></form>
+</div>
