--- a/views/new-todo.hbs
+++ b/views/new-todo.hbs
@@ -1,6 +1,7 @@
-<form action="/new" method="post"><input
-    type="text"
-    name="description"
-    placeholder="description"
-    class="inputBtn"
-  /><input type="submit" value="save" class="submitBtn" /></form>
+<div id="newwrapper"><form action="/new" method="post"><input
+      type="text"
+      name="description"
+      placeholder="description"
+      class="inputBtn"
+    /><input type="submit" value="save" class="submitBtn" /></form>
+</div>
