--- a/views/new-todo.hbs
+++ b/views/new-todo.hbs
@@ -1,7 +1,11 @@
-<div id="newwrapper"><form action="/new" method="post"><input
+<div class="pagewrapper">
+
+  <h3>add a new todo:</h3>
+  <form action="/new" method="post"><input
       type="text"
       name="description"
       placeholder="description"
       class="inputBtn"
+      required
     /><input type="submit" value="save" class="submitBtn" /></form>
 </div>
