--- a/views/delete-todo.hbs
+++ b/views/delete-todo.hbs
@@ -1,3 +1,3 @@
-<div id="deletewrapper"><h5>please confirm the removal</h5>
+<div class="pagewrapper"><h3>please confirm the removal</h3>
   <form action="/{{id}}/delete" method="post">
     <input type="submit" value="delete" class="submitBtn" /></form></div>
