--- a/views/todos.hbs
+++ b/views/todos.hbs
@@ -1,25 +1,32 @@
 <div id="homewrapper">
-  <ul>
-    {{#each todoArr}}
-      <li><h4>{{description}} + {{done}}</h4>
-        <p>created at {{created}}</p>
-        <div class="listdiv">
-          <a href="/{{id}}/edit">edit</a>
-          <a href="/{{id}}/delete">delete</a>
-          <form action="/" method="post"><input
-              type="submit"
-              name="done"
-              value="mark as done"
-            /></form>
-        </div>
-      </li>
-    {{/each}}
 
-  </ul>
   <div id="circleDiv">
+    <div class="headline"><h3>your tasks:</h3></div>
     <div class="circle">
       <a href="/new">create new</a>
     </div>
-
   </div>
+
+  <div id="sortDiv">
+    <h5>sort tasks by:</h5>
+    <a href="/sorted">done</a>
+    <a href="/sorted">undone</a>
+  </div>
+
+  <div id="listDiv">
+    <ul>
+      {{#each todoArr}}
+        <li>
+
+          <div class="info"><h4>{{description}}</h4>
+            <p>created at {{created}}</p></div>
+          <div class="editDel">
+            <a href="/{{id}}/edit">edit</a>
+            <a href="/{{id}}/delete">delete</a>
+          </div>
+        </li>
+      {{/each}}
+    </ul>
+  </div>
+
 </div>
